--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <img src="./images/Ain Dubai.jpeg" alt="AIN DUBAI">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/Bahar.jpeg" alt="BAHAR RESIDENCE">
+                        <img src="./images/night ain dubai.jpeg" alt="BAHAR RESIDENCE">
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/bahar view.jpg" alt="Bahar View">
+                        <img src="./images/jumera.avif" alt="Bahar View">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
