--- a/index.html
+++ b/index.html
@@ -159,7 +159,15 @@
                         <span class="discount-price">50 AED</span> per night
                     </p>
                     <p>Limited time discount!</p>
-                    <a href="#contact" class="cta-button">Book Now</a>
+                    <div class="booking-button-container">
+                        <button class="booking-button">Book Now</button>
+                        <div class="booking-dropdown">
+                            <a href="#" class="booking-option" data-platform="hostelbooking">HostelBooking.com</a>
+                            <a href="#" class="booking-option" data-platform="booking">Booking.com</a>
+                            <a href="#" class="booking-option" data-platform="agoda">Agoda</a>
+                            <a href="#" class="booking-option" data-platform="makemytrip">MakeMyTrip</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -174,6 +182,9 @@
                     <p><i class='bx bx-water'></i> 2 minutes walk to Jumeirah Beach</p>
                 </div>
             </div>
+        </section>
+        <section>
+            
         </section>
 
         <section id="contact">
@@ -198,6 +209,7 @@
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer>
@@ -214,6 +226,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://api.exchangerate-api.com/v4/latest/AED"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
 </body>
