--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="./images/lobby.jpeg"
                                 alt="Hostel Lounge"></div>
-                        <div class="swiper-slide"><img src="https://source.unsplash.com/1600x900/?hostel,kitchen"
-                                alt="Hostel Kitchen"></div>
-                        <div class="swiper-slide"><img src="https://source.unsplash.com/1600x900/?hostel,bedroom"
+                        <div class="swiper-slide"><img src="./images/Dinning.jpeg"
+                                alt="Dinning Table"></div>
+                        <div class="swiper-slide"><img src="./images/Bed.jpeg"
                                 alt="Hostel Bedroom"></div>
-                        <div class="swiper-slide"><img src="https://source.unsplash.com/1600x900/?hostel,bathroom"
-                                alt="Hostel Bathroom"></div>
-                        <div class="swiper-slide"><img src="https://source.unsplash.com/1600x900/?hostel,rooftop"
-                                alt="Hostel Rooftop"></div>
+                        <div class="swiper-slide"><img src="./images/Bed2.jpeg"
+                                alt="Hostel Bedroom"></div>
+                        <div class="swiper-slide"><img src="./images/sitting 2.jpeg"
+                                alt="Hostel Lobby"></div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
