--- a/index.html
+++ b/index.html
@@ -212,13 +212,22 @@
     </main>
 
     <footer>
+    <section id="terms">
         <div class="container">
-            <p>&copy; 2024 New Horizon DXB. All rights reserved.</p>
-            <ul class="footer-links">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-            </ul>
+            <h2>Terms and Conditions</h2>
+            <div class="terms-content">
+                <p>By booking with New Horizon DXB, you agree to the following terms:</p>
+                <ul>
+                    <li>Check-in time is 2:00 PM and check-out time is 11:00 AM.</li>
+                    <li>A valid ID is required at check-in.</li>
+                    <li>Cancellations must be made 48 hours prior to arrival for a full refund.</li>
+                    <li>Quiet hours are from 10:00 PM to 7:00 AM.</li>
+                    <li>Smoking is not allowed inside the hostel.</li>
+                    <li>Guests are responsible for any damages to hostel property.</li>
+                </ul>
+            </div>
         </div>
+    </section>
     </footer>
 
     <a href="#" id="back-to-top" title="Back to Top"><i class='bx bx-up-arrow-alt'></i></a>
